decal-macros/tests/ui/fail/fragment_invalid_args.stderr
error: [`decal::prelude::Fragment`] node expects a single argument
 --> tests/ui/fail/fragment_invalid_args.rs:6:13
  |
6 |             Fragment()
  |             ^^^^^^^^

error: [`decal::prelude::Fragment`] node expects a single argument
  --> tests/ui/fail/fragment_invalid_args.rs:12:13
   |
12 |             Fragment(1, 2)
   |             ^^^^^^^^
